Fix: touch and hold position is better on mobile, Added: Theme transition effect

--- a/src/styles/tailwind/tailwind.css
+++ b/src/styles/tailwind/tailwind.css
@@ -4,14 +4,10 @@
 
 @layer base {
   * {
-    /* transition: all 0.5s ease-in-out;
-    -webkit-transition: all 0.5s ease-in-out;
-    -moz-transition: all 0.5s ease-in-out;
-    -ms-transition: all 0.5s ease-in-out;
-    -o-transition: all 0.5s ease-in-out; */
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    @apply transition-colors duration-200;
   }
 
   html {
@@ -191,7 +187,8 @@
     @apply bg-white dark:bg-[#030303] underline-hover transition-all duration-300 ease-in-out;
   }
 
-  .menu-link:hover::after {
+  .menu-link:hover::after,
+  .menu-link.active::after {
     @apply w-full left-0;
   }
 
